# gefs-idaho

./: .gitignore  PROJECT_STATE.md  README.md  REFACTORING_SUMMARY.md  app.py  app_async.py  cache_valid_data.py  diagnose_data.py  monitor_logs.sh  pyproject.toml  test_app_loading.py  test_app_quick.py  test_coords_fix.py  verify_app.py
.github/: copilot-instructions.md
gefs_idaho.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/gefs_idaho/: __init__.py  data.py  derive.py  viz.py
src/gefs_idaho.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_current_date_subset.py  test_derive.py
