[project]
name = "gefs-idaho"
version = "0.1.0"
description = "GEFS Idaho forecast visualization with Panel"
requires-python = ">=3.10"
dependencies = [
    "xarray",
    "dask",
    "zarr",
    "netcdf4",
    "panel",
    "hvplot",
    "holoviews",
    "datashader",
    "numpy",
    "pandas",
    "fsspec",
    "s3fs",
    "aiohttp",  # Required by fsspec HTTPFileSystem for remote Zarr access
    "requests",  # Required by fsspec HTTPFileSystem for remote Zarr access
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

